--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
     background-color: black;
     color: white;
 }
+.headerb{
+    margin-top: 50px;
+    
+    color: white;
+}
 
 .profile-image{
     border-radius: 50%;
@@ -171,3 +176,35 @@ input[type=text], input[type=email], .message {
     margin-bottom: 16px; 
     padding: 40px 16px 24px 16px;
   }
+
+  body, html {
+    height: 100%;
+}
+
+/* The hero image */
+.hero-image {
+  /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("image/download\ \(1\).jpg");
+
+  /* Set a specific height */
+  height:600px;
+
+  /* Position and center the image to scale nicely on all screens */
+  background-position: center ;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  
+}
+
+/* Place text in the middle of the image */
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-weight: bolder;
+ 
+}
